@@ -1,3 +1,8 @@
+2010-12-10  Christophe Coutand  <ccoutand@stmi.com>
+
+	* include/lwipopts.h: Fix compilation error when compiling SNMP
+	code.
+
 2010-08-02  John Dallaway  <john@dallaway.org.uk>
 
 	* include/network.h: Match braces when including from C++ code.
